2007-05-03  Murray Cumming  <murrayc@murrayc-desktop>

	* docs/tutorial/gtkmm-tut.xml: Basics: Split part of the example section into 
	a Headers and Linking section, with slightly fuller information.
	libglademm section: Describe what you need to include and link for libglademm, 
	and link back to the basics section that I just created.

2007-05-01  Johannes Schmid <jhs@gnome.org>
	
	* gtk/src/style.hg:
	Wrap gtk_style_attach() and gtk_style_detach().
	Bug #351336

2007-05-01  Johannes Schmid <jhs@gnome.org>

	* gtk/src/window.hg: Added static set_default_icon_name() method, 
	wrapping gtk_window_set_default_icon_name().
	Bug #364395 (Yuriy Syrota)

2007-05-01  Johannes Schmid <jhs@gnome.org>
	
	* gtk/src/calendar.hg
	* gtk/src/calendar.ccg
	Bug #350584 – Calendar::get_date() method using Glib::Date

2007-05-01  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/gtk_signals.defs: Adjust the GtkStatusIcon::popup_menu signal 
	definition, because the GType parameter system can not distinguish between 
	guint and guint32 (There is no G_TYPE_UINT32).
	* gtk/src/statusicon.hg: Add signals for the GtkStatusIcon activate and 
	popup_menu signals. See the comment in the code about these not being 
	public API, but we are adding them anyway because they seem necessary, 
	and we cannot get an answer out of the GTK+ maintainers.
	Bug #

2007-05-01  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/statusicon.ccg:
	* gtk/src/statusicon.hg: Added popup_menu_at_position(), as an equivalent for 
	the gtk_status_icon_position_menu() helper callback.
	Bug #392948 (Jan Niklas Hasse)

2007-05-01  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/window.hg: Added set_accept_focus(), get_accept_focus(), 
	set_focus_on_map() and get_focus_on_map(). 
	Bug #421936

This is the trunk branch for gtkmm 2.11/12.

2.10.10:

2007-04-30  Johannes Schmid <johannes.schmid@openismus.com>

	* gtk/src/combo.hg:
	* gtk/src/fileselection.hg:
	* gtk/src/optionmenu.hg:
	* gtk/src/progress.hg:
