@@ -1,3 +1,8 @@
+2007-05-07  Jonathon Jongsma  <jjongsma@gnome.org>
+
+	* examples/book/custom/custom_widget/mywidget.cc,h: Update the custom widget
+	example to use cairo-based drawing instead of the old GDK drawing functions.
+
 2007-05-03  Murray Cumming  <murrayc@murrayc-desktop>
 
 	* docs/tutorial/gtkmm-tut.xml: Basics: Split part of the example section into 
